[package]
name = "sts_ai_slayer"
version = "0.1.0"
edition = "2024"

[dependencies]
derive-getters = "0.5.0"
paste = "1.0.15"
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
ratatui = { version = "0.29", features = ["all-widgets", "macros", "palette", "scrolling-regions"] }
smallvec = "1.15.1"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
