[package]
name = "sts_ai_slayer"
version = "0.1.0"
edition = "2024"

[dependencies]
derive-getters = "0.5.0"
paste = "1.0.15"
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
ratatui = { version = "0.29", features = ["all-widgets", "macros", "palette", "scrolling-regions"] }
smallvec = "1.15.1"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
crossterm = { version = "0.28.0", features = ["event-stream"] }
futures = "0.3.31"
