[package]
name = "sts_ai_slayer"
version = "0.1.0"
edition = "2024"

[dependencies]
derive-getters = "0.5.0"
paste = "1.0.15"
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
smallvec = "1.15.1"
strum = { version = "0.28.0", features = ["derive", "strum_macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-macros = { version = "2.6.0" }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
fliptui = { path = "../fliptui" }
